[gd_scene load_steps=4 format=3 uid="uid://bftqcrx45e7bw"]

[ext_resource type="Script" uid="uid://cvbait7mgngk7" path="res://scripts/info_gravity_tractor.gd" id="1_6q4mu"]
[ext_resource type="Texture2D" uid="uid://c6tlqe1lsdo52" path="res://assets/CORREO_gravity.jpg" id="2_6q4mu"]
[ext_resource type="Texture2D" uid="uid://ymctg4adov88" path="res://assets/beige.png" id="3_g2h0n"]

[node name="Gravity_tractor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6q4mu")

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("2_6q4mu")

[node name="atenuacion_del_blanco" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.24313726)
layout_mode = 0
offset_left = -7.0
offset_top = -9.0
offset_right = 1156.0
offset_bottom = 653.0
texture = ExtResource("3_g2h0n")

[node name="info" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 163.0
offset_right = 1127.0
offset_bottom = 617.0
theme_override_colors/default_color = Color(0.18717614, 0.18717614, 0.18717614, 1)
bbcode_enabled = true
text = "
"

[node name="kinetic_impactor" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 202.0
offset_top = -1.0
offset_right = 336.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 13
text = "kinetic impactor"
flat = true

[node name="gravity_tractor" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 375.0
offset_top = -1.0
offset_right = 477.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 13
text = "gravity tractor"
flat = true

[node name="ion_beam" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 534.0
offset_top = 2.0
offset_right = 640.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "ion beam "
flat = true

[node name="nuclear_interceptor" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 677.0
offset_top = 2.0
offset_right = 810.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "nuclear interceptor"
flat = true

[node name="email" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 65.0
offset_top = 2.0
offset_right = 161.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "Email"
flat = true
